2008-03-04  jtl  <jtl@britten.laudi.ka>

	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java (needsData): now call needsData() from the IHandlerContainer, 
	not the similar (former) method from an IWrapperContainer. See below.
	* src/de/schlund/pfixcore/workflow/app/IWrapperSimpleContainer.java (needsData): removed. See below.
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainerImpl.java (initIWrappers): also initialize RequestData reqdata.
	(needsData): removed. See below...
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainer.java (needsData): REMOVED! This has been there for years
	completely unnecessarily. We really should have used an identical implementation already present in IHandlerContainer, 
	as this container instance is only created once per page, while IWrapperContainer instances are created again 
	for every request. Oh my.
	* src/de/schlund/pfixcore/workflow/StateImpl.java: change the (inheriting) logger to be initalized from 
	the instance

2008-03-03  jtl  <jtl@schoenberg.laudi.ka>

	* src/de/schlund/pfixxml/util/RefCountingCollection.java (toArray): supressed warnings

2008-03-02  jtl  <jtl@britten.laudi.ka>

	* projects/core/xsl/xmlfontify.xsl: more cosmetics

2008-03-02  schst  <schst@stubbles.net>

	Added writeFragment(String xmlFragment) method to the XMLWriter:
	* src/de/schlund/pfixcore/oxm/impl/DOMWriter.java
	* src/de/schlund/pfixcore/oxm/impl/XMLWriter.java
	
	Added new OXM serializer for XML fragments contained in String properties:
	* src/de/schlund/pfixcore/oxm/impl/serializers/XMLFragmentSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/annotation/XMLFragmentSerializer.java
	* tests/junit/de/schlund/pfixcore/oxm/Test.java
	* tests/junit/de/schlund/pfixcore/oxm/testfragment.xml
	* tests/junit/de/schlund/pfixcore/oxm/FragmentBean.java
	
	Moved some methods from OXM unit test class to a new helper class
	* tests/junit/de/schlund/pfixcore/oxm/Test.java